Fix legend item hover flicker

--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ header {
 }
 
 .legend-item-group {
+  pointer-events: bounding-box;
   cursor: pointer;
 }
 
